--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,11 +38,11 @@ jobs:
       run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
       
     - name: Log in to registry
-      run: echo "${{ secrets.GITHUB_TOKEN}}" | docker login gchr.io -u $ --password-stdin
+      run: echo "${{ secrets.GITHUB_TOKEN}}" | docker login ghcr.io -u $ --password-stdin
       
     - name: Push image
       run: |
-        IMAGE_ID=gchr.io/${{ github.repository_owner }}/$IMAGE_NAME
+        IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
         
         # Change all uppercase to lowercase
         IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
