--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -28,13 +28,18 @@ jobs:
     - name: Test Go application
       run: go test -v ./tests/...
       
+      # Only build and push docker image if this action is triggered from the main branch.
+      
     - name: Build Docker image
+      if: github.event.pull_request.base.ref == 'main'
       run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
       
     - name: Log in to Github Package registry
+      if: github.event.pull_request.base.ref == 'main'
       run: echo "${{ secrets.GITHUB_TOKEN}}" | docker login ghcr.io -u $ --password-stdin
       
     - name: Push image to registry
+      if: github.event.pull_request.base.ref == 'main'
       run: |
         IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
         
