--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,25 +1,53 @@
-name: Go
+name: Go CI/CD
 
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    
+env:
+  IMAGE_NAME: algorithm-1
 
 jobs:
 
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.18
 
-    - name: Build
+    - name: Build Go application
       run: go build -v ./...
 
-    - name: Test
+    - name: Test Go application
       run: go test -v ./tests/...
+      
+      # Only build and push docker image if this action is triggered from the main branch.
+      
+    - name: Build Docker image
+      if: github.ref == 'main'
+      run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
+      
+    - name: Log in to Github Package registry
+      if: github.ref == 'main'
+      run: echo "${{ secrets.GITHUB_TOKEN}}" | docker login ghcr.io -u $ --password-stdin
+      
+    - name: Push image to registry
+      if: github.ref == 'main'
+      run: |
+        IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
+        
+        # Change all uppercase to lowercase
+        IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+        # Strip "v" prefix from tag name
+        [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+        echo IMAGE_ID=$IMAGE_ID
+        echo VERSION=latest
+        docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+        docker push $IMAGE_ID:$VERSION
