--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -31,15 +31,15 @@ jobs:
       # Only build and push docker image if this action is triggered from the main branch.
       
     - name: Build Docker image
-      if: github.ref == 'main'
+      if: github.ref == 'refs/head/main'
       run: docker build . --file Dockerfile --tag $IMAGE_NAME --label "runnumber=${GITHUB_RUN_ID}"
       
     - name: Log in to Github Package registry
-      if: github.ref == 'main'
+      if: github.ref == 'refs/head/main'
       run: echo "${{ secrets.GITHUB_TOKEN}}" | docker login ghcr.io -u $ --password-stdin
       
     - name: Push image to registry
-      if: github.ref == 'main'
+      if: github.ref == 'refs/head/main'
       run: |
         IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
         
