--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -62,5 +62,5 @@ jobs:
       with:
         token: ${{ secrets.REPO_ACCESS_TOKEN }}
         repository: seng499-s22-company3/shared
-        event-type: algorithm-1
+        event-type: company3-algorithm-1
         client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}", "repo": "algorithm-1"}'
